Fixes #3109: Down sort arrow visually broken in table with strong style (reindeer)
svn changeset:8281/svn branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -2779,6 +2779,7 @@ td.v-datefield-calendarpanel-nextyear {
 	font-weight: bold;
 	color: #44698b;
 	letter-spacing: -0.02em;
+	text-shadow: #fff 0 -1px 1px;
 }
 .v-label-h2,
 .v-caption-h2 {
@@ -3676,7 +3677,7 @@ td.v-datefield-calendarpanel-nextyear {
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: right -1110px;
 }
-.v-table-strong ..v-table-header-cell-desc .v-table-caption-container {
+.v-table-strong .v-table-header-cell-desc .v-table-caption-container {
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: right -1129px;
